# setup.cfg is required by setup.py
# More info available at https://docs.python.org/3/distutils/configfile.html

[metadata]
name = vra_lib
summary = vRealize Automation 8 REST Client and utility library
description-file =
    README.md
license = Apache License, Version 2.0
author = TODO
author-email = todo@vmware.com
home-page = http://to_be_defined/
url = https://github.com/to_be_defined
classifier =
    Environment :: vRealize Automation
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
keywords = VMware vRealize Automation

[files]
packages = vra_lib


